--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_addnew">Add new</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_pause">Pause</string>
+    <string name="action_resume">Resume</string>
     <string name="tab_downloading">Downloading</string>
     <string name="tab_downloaded">Downloaded</string>
 
