Added support for download to be added add wide. Added simple browser. (Do we really need it?) Added navigation drawer for smaller devices.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="action_resume">Resume</string>
     <string name="tab_downloading">Downloading</string>
     <string name="tab_downloaded">Downloaded</string>
+    <string name="tab_settings">Settings</string>
+    <string name="tab_browse">Browse</string>
 
     <!-- Add New dialog strings -->
     <string name="addnew_title">Add new download</string>
