--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="action_delete">Delete</string>
     <string name="action_pause">Pause</string>
     <string name="action_resume">Resume</string>
+    <string name="action_selectall">Select All</string>
     <string name="tab_downloading">Downloading</string>
     <string name="tab_downloaded">Downloaded</string>
     <string name="tab_settings">Settings</string>
