--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,9 @@
     <string name="action_pause">Pause</string>
     <string name="action_resume">Resume</string>
     <string name="action_selectall">Select All</string>
+    <string name="action_home">Home</string>
+    <string name="action_favourite">Favourite</string>
+    <string name="action_history">History</string>
     <string name="tab_downloading">Downloading</string>
     <string name="tab_downloaded">Downloaded</string>
     <string name="tab_settings">Settings</string>
