--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="title_storageconfiguration">STORAGE CONFIGURATION</string>
     <string name="title_connectionconfiguration">CONNECTION CONFIGURATION</string>
     <string name="title_sub_autostart">Auto start download</string>
+    <string name="title_sub_aggregatenotification">Aggregate completed notifications</string>
     <string name="title_sub_downloadlocation">Default download location</string>
     <string name="title_sub_downloadsize">Download size warning</string>
     <string name="title_sub_downloads">Max number of parallel downloads</string>
