--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_sort">Sort</string>
+    <string name="action_filter">Filter</string>
     <string name="action_addnew">Add new</string>
     <string name="action_delete">Delete</string>
     <string name="action_pause">Pause</string>
@@ -111,6 +112,17 @@
     <string name="dsc_completed">Download completed date</string>
     <string name="asc_size">Download file size</string>
     <string name="dsc_size">Download file size</string>
+
+    <!-- Filter dialog -->
+    <string name="title_filterby">Filter By</string>
+    <string name="document">Document</string>
+    <string name="code">Code</string>
+    <string name="audio">Audio</string>
+    <string name="image">Image</string>
+    <string name="video">Video</string>
+    <string name="archive">Archive</string>
+    <string name="pdf">PDF</string>
+    <string name="all">All</string>
 
     <!-- Notification strings -->
     <string name="download_size_exceeded_title">Download size exceeded</string>
